feat: implement customer management features
- Add search input for customer management
- Implement vendor table with search and pagination functionality
- Fix pagination behavior when changing items per page
- Enhance vendor table UI with Tailwind CSS for better appearance
- Add toggle button for displaying new customer form
- Create and style new customer form using Tailwind CSS
- Add styled header for customer management section
- Refine modal styles for improved user experience
- Add success notification after updating vendor status
- Implement delete confirmation modal for vendors

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "php-flasher/flasher-notyf-laravel": "^2.0",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
