git ignore - /public/admin/assets/img/profile_img/ /public/product_img/

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 /public/build
 /public/hot
 /public/storage
-/public/admin/product_img
+/public/admin/assets/img/profile_img/
+/public/product_img/
 /storage/*.key
 /vendor
 .env
