--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
         "php-flasher/flasher-notyf-laravel": "^2.0",
+        "phpoffice/phpspreadsheet": "^1.29",
         "spatie/laravel-permission": "^6.9",
         "srmklive/paypal": "^3.0"
     },
