--- a/.env.example
+++ b/.env.example
@@ -66,4 +66,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 INVOICE_VARIABLE_NAME=celergen
+SERVER_MOD=local
 ADMIN_EMAIL=admin@example.com
